2005-09-27  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Add build system for building docs and fix setuid issues.

	* hw/dmx/Makefile.am:
	* hw/dmx/doc/Makefile.am:
	* hw/xfree86/Makefile.am:
	* hw/xfree86/doc/Makefile.am:
	* hw/xfree86/doc/sgml/Makefile.am:
	Add build system for sgml docs.
	
2005-09-26  Alan Coopersmith  <alan.coopersmith@sun.com>

	* configure.ac:
	* hw/xfree86/utils/Makefile.am:
	* hw/xfree86/utils/ioport/Makefile.am
	* hw/xfree86/utils/pcitweak/Makefile.am: 
	Add ioport and pcitweak utils from monolith hw/xfree86/etc dir.

	* xserver/xorg/hw/xfree86/common/Makefile.am:
	Generate xf86DefModeSet.c from vesamodes & extramodes

	* xserver/xorg/hw/xfree86/os-support/solaris/Makefile.am:
	Add apSolaris.shar to EXTRA_DIST
	
2005-09-25  Alan Coopersmith  <alan.coopersmith@sun.com>

	* Xext/Makefile.am: 
	Add SecurityPolicy file for XCSECURITY extension.
	
	* hw/xfree86/dummylib/Makefile.am:
	Add README to EXTRA_DIST

2005-09-23  Alan Coopersmith  <alan.coopersmith@sun.com>

	* configure.ac:
	* cpprules.in:
	* hw/xfree86/Makefile.am:
	* hw/xfree86/dummylib/Makefile.am:
	* hw/xfree86/os-support/.cvsignore:
	* hw/xfree86/os-support/Makefile.am:
	* hw/xfree86/scanpci/Makefile.am:
	* hw/xfree86/utils/Makefile.am:
	* hw/xfree86/utils/scanpci/Makefile.am:
	* hw/xfree86/utils/xorgcfg/Makefile.am:
	* hw/xfree86/utils/xorgconfig/Makefile.am:
	Add scanpci, xorgcfg, & xorgconfig utilities.

2005-09-21  Kristian Høgsberg  <krh@redhat.com>

	* configure.ac: Accept --with-xkb-output argument to specify
	output dir for compiled xkb keymaps.  Define XKM_OUTPUT_DIR and
	XKB_BIN_DIRECTORY.

	* include/xkb-config.h.in: Add XKM_OUTPUT_DIR and XKB_BIN_DIRECTORY.

	* xkb/Makefile.am (AM_CFLAGS): Add XKB_CFLAGS.

2005-09-20  Adam Jackson  <ajax@freedesktop.org>

	* hw/xfree86/os-support/Makefile.am:
	Bug #4487: Add the bsd subdir to DIST_SUBDIRS. (Joshua Baergen)

2005-09-20  Adam Jackson  <ajax@freedesktop.org>

	* cfb/Makefile.am: