@@ -46,7 +46,7 @@ if BUILDSGMLDOCS
 	$(LINUXDOC) -B html --split=0 $^
 
 noinst_DATA = $(TXT_FILES) $(PS_FILES) $(PDF_FILES) $(HTML_FILES)
-CLEANFILES = $(PS_FILES) $(PDF_FILES) $(HTML_FILES)
+CLEANFILES = $(TXT_FILES) $(PS_FILES) $(PDF_FILES) $(HTML_FILES)
 endif
 
-EXTRA_DIST = $(SGML_FILES) $(TXT_FILES)
+EXTRA_DIST = $(SGML_FILES)
